# 02-project-structure

./: CMakeLists.txt
app/: console_application.cc
include/chess/: chess_lib.h
src/: chess_board.cc  chess_pieces.cc
tests/: chess_board_tests.cc  chess_pieces_tests.cc
